fixed z-index

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -30,6 +30,7 @@ header {
   padding-right: 10em;
   position: fixed;
   width: 80%;
+  z-index: 100000;
 }
 
 
@@ -39,6 +40,7 @@ header {
 	padding-right: 1em;
 	position: relative;
 	width: inherit;
+	z-index: 10000;
     }
 }
 .post-meta {
